# fpl-tool

./: .gitignore  .pre-commit-config.yaml  IDEAS.md  README.md  api.py.patch  app.py  config.py  history.py.patch  loading.py.patch  main.py  main.py.patch  player_histories.csv  preprocessing.py.patch  pyproject.toml  ranking.py.patch  run.py
backend/: app.py  requirements.txt
backend/python_scripts/: main.py
backend/static/: index.html
data/: fixture_difficulty_ratings.csv  fixtures.csv  player_histories.csv  players_data.csv  scoring.json
data/rules/: parameters.json
domain/: __init__.py  calculations.py  history.py  preprocessing.py
fpl/: __init__.py  api.py  calculations.py  config.py  history.py  preprocessing.py  ranking.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx
helpers/: __init__.py  api.py  config.py  loading.py  logger.py  update_guard.py
infrastructure/: api_client.py  loading.py  logger.py
routes/: utils.py
services/: data_service.py  player_service.py
static/: filters.js  fpl.js  main.js  navigation.js  pinning.js  style.css  tooltip.js
templates/: _filters.html  _pagination.html  _results.html  _table.html  index.html
tests/: README.md  __init__.py  conftest.py
tests/domain/: __init__.py  test_calculations.py  test_history.py
tests/e2e/: __init__.py  test_web_app.py
tests/infrastructure/: test_api_client.py
tests/integration/: __init__.py  test_data_pipeline.py
tests/performance/: test_load.py
tests/services/: __init__.py  (+2 more)
utils/: __init__.py  loading.py  update_guard.py
(+2 files in other folders)
